Mon Jul 26 20:26:53 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/OS_NS_Thread.h: Note that the cpu_set_size to the get/set
          affinity methods is a byte count.

Thu Jul 15 17:53:47 UTC 2010  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Service_Gestalt.cpp:
        * THANKS:
        
          Restore pre-gestalt behavior of returning -1 if svc.conf does
          not exist and an ACE_Service_Config::open() is expecting to use
          the default file.

          Thanks to Daynesh Mangal (daynesh@gmail.com) for reporting the
          errant behavior.
        
Sun Jul 04 18:57:33 CEST 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ACE version 5.8 released.

Thu Jul 01 08:55:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

	* protocols/tests/INet/MT_Get/Main.cpp:
	  Fixed truncation warnings.

Wed Jun 30 14:57:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

	* protocols/tests/INet/MT_Get/Main.cpp:
	  Fixed truncation warnings.

Tue Jun 29 11:19:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

	* protocols/tests/INet/MT_Get/Main.cpp:
	  Fixed truncation warnings.

	* protocols/ace/INet/INet_Log.h:
	* protocols/ace/INet/INet_Log.cpp:
	  Fixed versioned namespace errors.

Tue Jun 29 10:50:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

	* protocols/ace/INet/AuthenticationBase.h:
	* protocols/ace/INet/AuthenticationBase.inl:
	* protocols/ace/INet/FTP_ClientRequestHandler.cpp:
	* protocols/ace/INet/FTP_ClientRequestHandler.h:
	  Small optimization for authentication (avoid copies).
	  Added documentation.

	* protocols/ace/INet/BufferedStreamBuffer.h:
	  Added documentation.

	* protocols/ace/INet/ConnectionCache.cpp:
	* protocols/ace/INet/ConnectionCache.h:
	* protocols/ace/INet/ConnectionCache.inl:
	  Fixed close_connection.
	  Added documentation.

Tue Jun 29 09:32:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/FTP_ClientRequestHandler.inl:
	  Fixed VC71 compile problem.
