@@ -1,3 +1,9 @@
+Thu Jul 29 14:41:32 UTC 2010  Steve Huston  <shuston@riverace.com>
+
+        * ace/Process.h (set_handles): Clarify that passing ACE_INVALID_HANDLE
+          for any of the handle values will cause a duplicate of the
+          corresponding ACE_STDIN/OUT/ERR to be used in the options.
+
 Mon Jul 26 20:26:53 UTC 2010  Steve Huston  <shuston@riverace.com>
 
         * ace/OS_NS_Thread.h: Note that the cpu_set_size to the get/set
